--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,14 @@
 <html lang="en">
   {{ partial "head.html" . }}
 <body>
+  <link href="/pagefind/pagefind-ui.css" rel="stylesheet">
+<script src="/pagefind/pagefind-ui.js"></script>
+<div id="search"></div>
+<script>
+    window.addEventListener('DOMContentLoaded', (event) => {
+        new PagefindUI({ element: "#search", showSubResults: true });
+    });
+</script>
   <a class="skip-link" href="#main">Skip to main</a>
   <main id="main">
     <div class="content">
